--- a/00-preprocess-TCR.Rmd
+++ b/00-preprocess-TCR.Rmd
@@ -32,36 +32,40 @@ dir.create("data/TCR", showWarnings = FALSE)
 
 tcr_raw_output <- file.path("data/TCR", "tcr_unified.csv")
 
-if (!file.exists(tcr_raw_output)){
+if (!file.exists(tcr_raw_output)) {
   raw_files <- sort(dir(tcr_data_dir, pattern = "*.tsv", full.names = TRUE))
-  if (length(raw_files) == 0){
+  if (length(raw_files) == 0) {
     stop(paste0("No files found within ", tcr_data_dir))
   }
-  tcr_raw_original <- map(raw_files, .f=function(x){
+  tcr_raw_original <- map(raw_files, .f = function(x) {
     # x = "sampleExport.2022-06-01_05-18-41//Balb-c_1_blood.tsv"
-    read.csv(x, sep = "\t") %>% mutate(sample_name=gsub("\\.tsv", "", basename(x))) 
-    #data.frame(sample_name=gsub("\\.tsv", "", basename(x)), sample_amount_ng=1)
-  }) %>% bind_rows() %>% 
+    read.csv(x, sep = "\t") %>% mutate(sample_name = gsub("\\.tsv", "", basename(x)))
+    # data.frame(sample_name=gsub("\\.tsv", "", basename(x)), sample_amount_ng=1)
+  }) %>%
+    bind_rows() %>%
     mutate(
-      #sample_name = gsub("T_cells", "Tcells", sample_name), 
+      # sample_name = gsub("T_cells", "Tcells", sample_name),
       org = case_when(
         grepl("^Pt", sample_name) ~ "Human",
         grepl("^Balb-c", sample_name) ~ "Mouse",
         grepl("^Recipient_", sample_name) ~ "Mouse",
         grepl("^Donor", sample_name) ~ "Mouse",
-        TRUE ~ "FixMe"),
+        TRUE ~ "FixMe"
+      ),
       samp_type = case_when(
         grepl("^Donor", sample_name) ~ "Donor",
         grepl("^Pt", sample_name) ~ "Patient",
         grepl("^Balb-c", sample_name) ~ "Healthy",
         grepl("^Recipient_", sample_name) ~ "Recipient",
-        TRUE ~ "FixMe"),
+        TRUE ~ "FixMe"
+      ),
       indv_type = case_when(
         grepl("[Dd]onor", sample_name) ~ "Donor",
         grepl("^Pt", sample_name) ~ "Recipient",
         grepl("^Balb-c", sample_name) ~ "Recipient",
         grepl("^Recipient_", sample_name) ~ "Recipient",
-        TRUE ~ "FixMe"),
+        TRUE ~ "FixMe"
+      ),
       gvhd = case_when(
         grepl("[Dd]onor", sample_name) ~ "noGvHD",
         grepl("^Pt[A-G]", sample_name) ~ "GvHD",
@@ -70,36 +74,36 @@ if (!file.exists(tcr_raw_output)){
         grepl("^Pt[H-J]", sample_name) ~ "noGvHD",
       ),
       indv_id = case_when(
-        grepl("^Balb-c", sample_name)     ~ gsub(".*?_(\\d*?)_.*", "\\1", sample_name ),
-        grepl("^Pt", sample_name)   ~ gsub("Pt(.+?)_.*", "\\1", sample_name),
-        grepl("^Donor", sample_name)     ~ gsub(".*?_(\\d*?)_.*", "\\1", sample_name),
+        grepl("^Balb-c", sample_name) ~ gsub(".*?_(\\d*?)_.*", "\\1", sample_name),
+        grepl("^Pt", sample_name) ~ gsub("Pt(.+?)_.*", "\\1", sample_name),
+        grepl("^Donor", sample_name) ~ gsub(".*?_(\\d*?)_.*", "\\1", sample_name),
         grepl("Recipient_tx", sample_name) ~ gsub("Recipient_tx(\\d*?)_(\\d+)_.*", "\\2", sample_name),
-        TRUE                     ~ "FixMe" 
+        TRUE ~ "FixMe"
       ),
       tissue = case_when(
-        indv_type == "Donor" & org == "Mouse"     ~ "Tcells",
-        indv_type == "Donor" & org == "Human"     ~ "graft_blood",
-        grepl("^Balb-c", sample_name)   ~ gsub(".*_\\d_(.*)$", "\\1", sample_name),
-        grepl("^Pt", sample_name)   ~ gsub("Pt._(.*)$", "\\1", gsub("_TCRB", "",   sample_name)),
+        indv_type == "Donor" & org == "Mouse" ~ "Tcells",
+        indv_type == "Donor" & org == "Human" ~ "graft_blood",
+        grepl("^Balb-c", sample_name) ~ gsub(".*_\\d_(.*)$", "\\1", sample_name),
+        grepl("^Pt", sample_name) ~ gsub("Pt._(.*)$", "\\1", gsub("_TCRB", "", sample_name)),
         grepl("Recipient_tx", sample_name) ~ gsub(".*_D\\d+_(.*)$", "\\1", sample_name),
-        TRUE                     ~ "FixMe" 
+        TRUE ~ "FixMe"
       ),
-      exp_rep =  ifelse(grepl("Recipient_tx", sample_name), gsub("Recipient_tx(\\d*?)_(\\d+)_.*", "\\1", sample_name), NA),
+      exp_rep = ifelse(grepl("Recipient_tx", sample_name), gsub("Recipient_tx(\\d*?)_(\\d+)_.*", "\\1", sample_name), NA),
       collection_day = ifelse(grepl("Recipient_tx", sample_name), gsub("Recipient_tx.*D(\\d*?)_.*", "\\1", sample_name), NA)
-    ) %>% 
+    ) %>%
     mutate(
       indv_label = paste(samp_type, indv_id),
-      indv_label = ifelse(!is.na(exp_rep), paste0(indv_label, ", rep", exp_rep), indv_label ),
-      indv_label = ifelse(!is.na(collection_day), paste0(indv_label, ", day ", collection_day), indv_label ),
+      indv_label = ifelse(!is.na(exp_rep), paste0(indv_label, ", rep", exp_rep), indv_label),
+      indv_label = ifelse(!is.na(collection_day), paste0(indv_label, ", day ", collection_day), indv_label),
       indv_tissue_label = paste(samp_type, indv_id, "-", gsub("_", " ", tissue)),
       sample_amount_ng = round(sample_amount_ng, 2)
-    )  
+    )
   # Ran into strange issue with rounding the sample_ammount_ng; now we round above
   #   > read.csv("data/TCR/tcr_unified.csv") %>% filter(sample_name == "Balb-c_1_spleen") %>% pull(sample_amount_ng) %>% unique()
   #      [1] 1195.458 1195.458
 
   # View(tcr_raw_original %>% select(sample_name, org, gvhd,samp_type,  indv_id, tissue, exp_rep, collection_day) %>% distinct())
-  
+
   # we sort here so the resulting file is hashable for ID
   write.csv(tcr_raw_original %>% arrange(sample_name, rearrangement), file = tcr_raw_output, row.names = FALSE)
 }
@@ -125,124 +129,132 @@ The following chunk serves two purposes: reading in the TCR data, and calculatin
 
 ```{R 00-preprocess-TCR-3}
 tcr_objects_path <- "tcr_objects.Rdata"
-if(!file.exists(tcr_objects_path)){
-  tcr_raw_output <- file.path("data/TCR", "tcr_unified.csv") 
-  if(tools::md5sum(tcr_raw_output) != "fd463374450fdbfca4565669dd49d89d") warning("tcr_unified.csv may need be re-created, it does not match the validated version")
-  tcr_raw <- data.table::fread(tcr_raw_output) %>% 
+if (!file.exists(tcr_objects_path)) {
+  tcr_raw_output <- file.path("data/TCR", "tcr_unified.csv")
+  if (tools::md5sum(tcr_raw_output) != "fd463374450fdbfca4565669dd49d89d") warning("tcr_unified.csv may need be re-created, it does not match the validated version")
+  tcr_raw <- data.table::fread(tcr_raw_output) %>%
     filter(frame_type == "In") %>%
     as_tibble()
-  
-  tcr_sample_metadata <- tcr_raw %>% 
-    select(sample_name, org,  samp_type, collection_day,  sample_amount_ng, indv_type, exp_rep, gvhd, indv_id, indv_label, tissue, indv_tissue_label, species:total_templates_agg) %>% 
+
+  tcr_sample_metadata <- tcr_raw %>%
+    select(sample_name, org, samp_type, collection_day, sample_amount_ng, indv_type, exp_rep, gvhd, indv_id, indv_label, tissue, indv_tissue_label, species:total_templates_agg) %>%
     distinct()
 
 
-  NT_by_patient = tcr_raw %>% 
+  NT_by_patient <- tcr_raw %>%
     select(indv_label, rearrangement, productive_frequency) %>%
-    pivot_wider(names_from = indv_label, values_from = productive_frequency, values_fill = 0, values_fn = sum ) 
-  
-  AA_by_patient = tcr_raw %>% 
+    pivot_wider(names_from = indv_label, values_from = productive_frequency, values_fill = 0, values_fn = sum)
+
+  AA_by_patient <- tcr_raw %>%
     select(indv_label, amino_acid, productive_frequency) %>%
-    pivot_wider(names_from = indv_label, values_from = productive_frequency, values_fill =  0, values_fn = sum ) 
- bioid_by_patient = tcr_raw %>% 
+    pivot_wider(names_from = indv_label, values_from = productive_frequency, values_fill = 0, values_fn = sum)
+  bioid_by_patient <- tcr_raw %>%
     select(indv_label, bio_identity, productive_frequency) %>%
-    pivot_wider(names_from = indv_label, values_from = productive_frequency, values_fill =  0, values_fn = sum ) 
-  
-  paired_patients = expand.grid(pt_x = unique(tcr_raw$indv_label), pt_y = unique(tcr_raw$indv_label)) %>% 
+    pivot_wider(names_from = indv_label, values_from = productive_frequency, values_fill = 0, values_fn = sum)
+
+  paired_patients <- expand.grid(pt_x = unique(tcr_raw$indv_label), pt_y = unique(tcr_raw$indv_label)) %>%
     filter(pt_x != pt_y)
-  
-  list_of_paired_patient_nt = apply(paired_patients, 1, function(row){
+
+  list_of_paired_patient_nt <- apply(paired_patients, 1, function(row) {
     NT_by_patient %>%
-      select(all_of(c(row[["pt_x"]],row[["pt_y"]])))
-  }) 
-  list_of_paired_patient_aa = apply(paired_patients, 1, function(row){
+      select(all_of(c(row[["pt_x"]], row[["pt_y"]])))
+  })
+  list_of_paired_patient_aa <- apply(paired_patients, 1, function(row) {
     AA_by_patient %>%
-      select(all_of(c(row[["pt_x"]],row[["pt_y"]])))
-  }) 
-  list_of_paired_patient_bioid = apply(paired_patients, 1, function(row){
+      select(all_of(c(row[["pt_x"]], row[["pt_y"]])))
+  })
+  list_of_paired_patient_bioid <- apply(paired_patients, 1, function(row) {
     bioid_by_patient %>%
-      select(all_of(c(row[["pt_x"]],row[["pt_y"]])))
-  }) 
-  
-  
-  
-  num_overlap_clones2 <- function(df){
+      select(all_of(c(row[["pt_x"]], row[["pt_y"]])))
+  })
+
+
+
+  num_overlap_clones2 <- function(df) {
     # count rows where both columns are greater than zero
-    nrow(df[df[,1] > 0 & df[,2] > 0, ])
+    nrow(df[df[, 1] > 0 & df[, 2] > 0, ])
   }
-  
-  num_shared_clone = list_of_paired_patient_nt %>% 
-    map(~num_overlap_clones2(.)) %>% 
+
+  num_shared_clone <- list_of_paired_patient_nt %>%
+    map(~ num_overlap_clones2(.)) %>%
     unlist(.)
-  
-  num_shared_aa = list_of_paired_patient_aa %>% 
-    map(~num_overlap_clones2(.)) %>% 
+
+  num_shared_aa <- list_of_paired_patient_aa %>%
+    map(~ num_overlap_clones2(.)) %>%
     unlist(.)
-  
-  num_shared_bioid = list_of_paired_patient_bioid %>% 
-    map(~num_overlap_clones2(.)) %>% 
+
+  num_shared_bioid <- list_of_paired_patient_bioid %>%
+    map(~ num_overlap_clones2(.)) %>%
     unlist(.)
-  
-  paired_patients$num_shared_clones = num_shared_clone
-  paired_patients$num_shared_aa = num_shared_aa
-  paired_patients$num_shared_bioid = num_shared_bioid
-  
+
+  paired_patients$num_shared_clones <- num_shared_clone
+  paired_patients$num_shared_aa <- num_shared_aa
+  paired_patients$num_shared_bioid <- num_shared_bioid
+
   shared_clones <- paired_patients
-  
-  ##to draw the venn diagram, we need to create a different format
-  ##the format is a list of vector, each vector containing the clone names present in each patient
-  
-  # We removed the graft blood  
+
+  ## to draw the venn diagram, we need to create a different format
+  ## the format is a list of vector, each vector containing the clone names present in each patient
+
+  # We removed the graft blood
   indvs <- unique(tcr_raw$indv_label)
   clones_per_pt <- lapply(setNames(indvs, indvs), function(x) {
-    tcr_raw %>% filter(indv_label == x) %>% 
-      filter(tissue != "graft_blood") %>% 
+    tcr_raw %>%
+      filter(indv_label == x) %>%
+      filter(tissue != "graft_blood") %>%
       filter(productive_frequency > 0) %>%
-      pull(rearrangement) %>% unique()
-  }) 
+      pull(rearrangement) %>%
+      unique()
+  })
   aa_per_pt <- lapply(setNames(indvs, indvs), function(x) {
-    tcr_raw %>% filter(indv_label == x) %>% 
-      filter(tissue != "graft_blood") %>% 
+    tcr_raw %>%
+      filter(indv_label == x) %>%
+      filter(tissue != "graft_blood") %>%
       filter(productive_frequency > 0) %>%
-      pull(amino_acid) %>% unique()
+      pull(amino_acid) %>%
+      unique()
   })
   bioid_per_pt <- lapply(setNames(indvs, indvs), function(x) {
-    tcr_raw %>% filter(indv_label == x) %>% 
-      filter(tissue != "graft_blood") %>% 
+    tcr_raw %>%
+      filter(indv_label == x) %>%
+      filter(tissue != "graft_blood") %>%
       filter(productive_frequency > 0) %>%
-      pull(bio_identity) %>% unique()
+      pull(bio_identity) %>%
+      unique()
   })
   # this is the result from the AB-correlations.py script described above
-  new_tcr_corrs <- read.csv(sep = "\t", "data/2022-08-29-tcr-correlations.tsv", header=FALSE, col.names = strsplit("fileA\tfileB\tsizeA\tsizeB\tnorm_sizeA\tnorm_sizeB\tJSD\tjsd_nt_norm\tjsd_aa_raw\tjsd_aa_norm\tmorisita_nt_raw\toverlapping_clones\toverlapping_aa", split = "\t")[[1]], na.strings = c("nan"))
-  #do a double join to get all (non-unique combinations)
+  new_tcr_corrs <- read.csv(sep = "\t", "data/2022-08-29-tcr-correlations.tsv", header = FALSE, col.names = strsplit("fileA\tfileB\tsizeA\tsizeB\tnorm_sizeA\tnorm_sizeB\tJSD\tjsd_nt_norm\tjsd_aa_raw\tjsd_aa_norm\tmorisita_nt_raw\toverlapping_clones\toverlapping_aa", split = "\t")[[1]], na.strings = c("nan"))
+  # do a double join to get all (non-unique combinations)
   tcr_corrs <- rbind(
-    new_tcr_corrs %>% mutate(pair_is_unique=TRUE),
-    new_tcr_corrs %>% 
+    new_tcr_corrs %>% mutate(pair_is_unique = TRUE),
+    new_tcr_corrs %>%
       filter(fileA != fileB) %>%
-      mutate(fileX=fileA, fileA=fileB, fileB=fileX,
-             sizeX=sizeA, sizeA=sizeB, sizeB=sizeX, 
-             norm_sizeX=norm_sizeA, norm_sizeA=norm_sizeB, norm_sizeB=norm_sizeX,
-             pair_is_unique=FALSE) %>% 
+      mutate(
+        fileX = fileA, fileA = fileB, fileB = fileX,
+        sizeX = sizeA, sizeA = sizeB, sizeB = sizeX,
+        norm_sizeX = norm_sizeA, norm_sizeA = norm_sizeB, norm_sizeB = norm_sizeX,
+        pair_is_unique = FALSE
+      ) %>%
       select(-fileX, -sizeX, -norm_sizeX)
-  ) %>% 
-    rename(sample1=fileA, sample2=fileB)  %>% 
+  ) %>%
+    rename(sample1 = fileA, sample2 = fileB) %>%
     distinct()
-  tissue_annotations = read.csv("data/updated_colors_dendrograms.csv")
+  tissue_annotations <- read.csv("data/updated_colors_dendrograms.csv")
 
   save(
     list = c(
-      "tcr_sample_metadata", 
+      "tcr_sample_metadata",
       "tcr_corrs",
       "tissue_annotations",
       "clones_per_pt",
       "aa_per_pt",
       "bioid_per_pt",
-      "tcr_raw"), 
-    file = tcr_objects_path  )
-  
-} else{
+      "tcr_raw"
+    ),
+    file = tcr_objects_path
+  )
+} else {
   load(tcr_objects_path)
 }
-
 ```
 
